name:                lens-extra
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lukexi/lens-extra#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           2015 Luke Iannini
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Lens.Extra
  build-depends:       base >= 4.7 && < 5, lens, mtl
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite lens-extra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lens-extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lukexi/lens-extra
